--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "Inside My Minds Journey"
 theme = "yinyang"
 DefaultContentLanguage = "en"
+enableRobotsTXT = true
 
 [author]
   name = "Zakatell Kanda"
