--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,8 @@ jobs:
       with:
         hugo-version: '0.68.3'
         extended: true
+    - name: Build
+      run: hugo --minify
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
