we need to elavate to root when using system nodejs to install package

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
       with:
         submodules: true  # Fetch Hugo themes
         fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-    - run: npm install -g postcss-cli autoprefixer
+    - run: sudo npm install -g postcss-cli autoprefixer
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
