--- a/config.toml
+++ b/config.toml
@@ -11,29 +11,29 @@ pygmentsCodefences       = true
 [params]
     dateform             = "Mon Jan 02, 2006"
     dateformfull         = "Mon Jan 2 2006 15:04:05 EST"
-    favicon              = "sam.ico"
+    favicon              = "favicon.ico"
     homepage             = "main"                           # What to call the home page link
     footerText           = "You only live once, smile and make it count."
 
-# Metadata for Open Graph and Twitter
+    # Metadata for Open Graph and Twitter
     description          = "my random blabbing"               # Max 160 characters show in search results
     images               = ["tn.png"]                       # Image that shows on Twitter cards and Open Graph links to the site
     title                = "intimacy of my thoughts"
 
 [[params.mainMenu]]
-    link = "/posts"
+    link = "posts"
     text = "posts"
 
 [[params.mainMenu]]
-    link = "/gallery"
+    link = "gallery"
     text = "gallery"
 
 [[params.mainMenu]]
-    link = "/about"
+    link = "about"
     text = "who is zak?"
 
 [[params.mainMenu]]
-    link = "/dev"
+    link = "dev"
     text = "dev"
 
 [imaging]
