--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 # If your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would
 # contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
-baseURL: "https://adityatelange.github.io/"
+baseURL: "https://zkanda.io/"
 title: Zakatell Kanda
 copyright: "© [Zakatell Kanda](https://zkanda.io)"
 paginate: 5
